<resources>
    <string name="app_name">Quiz</string>
    <string name="questions">1. Which logo is of Mercedese Benz?</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="option4">Option 4</string>
    <string name="welcome_pranav">Welcome, Pranav</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="portrait_logo">Portrait Logo</string>
</resources>
