<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".7">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbl_question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fadingEdge="horizontal|vertical"
                android:gravity="center_horizontal|center_vertical"
                android:padding="10dp"
                android:text="@string/questions"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.833" />

        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight=".3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".5">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/cell1"
                            android:layout_margin="15dp">
                            <ImageButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:id="@+id/option1"
                                android:onClick="onClickCard"
                                android:src="@drawable/black"
                                android:scaleType="fitCenter"
                                android:padding="20dp"
                                android:background="@android:color/transparent"
                                android:contentDescription="@string/option1" />
                        </android.support.constraint.ConstraintLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".5">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/cell2"
                            android:layout_margin="15dp">

                            <ImageButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/option2"
                                android:onClick="onClickCard"
                                android:layout_gravity="center"
                                android:src="@drawable/bing"
                                android:scaleType="fitCenter"
                                android:padding="20dp"
                                android:background="@android:color/transparent"
                                android:contentDescription="@string/option2" />

                        </android.support.constraint.ConstraintLayout>
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".5">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="15dp"
                            android:background="@drawable/cell3">

                            <ImageButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:onClick="onClickCard"
                                android:id="@+id/option3"
                                android:src="@drawable/angularjs"
                                android:scaleType="fitCenter"
                                android:padding="20dp"
                                android:background="@android:color/transparent"
                                android:contentDescription="@string/option3" />

                        </android.support.constraint.ConstraintLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight=".5">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/cell4"
                            android:layout_margin="15dp">

                            <ImageButton
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:id="@+id/option4"
                                android:onClick="onClickCard"
                                android:scaleType="fitCenter"
                                android:padding="20dp"
                                android:background="@android:color/transparent"
                                android:contentDescription="@string/option4"
                                android:src="@drawable/acrobat"/>

                        </android.support.constraint.ConstraintLayout>
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
